--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "zod": "^3.23.6"
   },
   "devDependencies": {
-    "@types/react": "^18.2.66",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.12.10",
+    "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -32,7 +34,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "typescript": "^5.2.2",
+    "typescript": "^5.4.5",
     "vite": "^5.2.0"
   }
 }
