--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@fontsource/poppins": "^5.0.14",
     "@hookform/resolvers": "^3.3.4",
-    "@mui/material": "^5.15.16",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "axios": "^1.6.8",
     "react": "^18.2.0",
@@ -21,6 +20,7 @@
     "react-hook-form": "^7.51.4",
     "react-router-dom": "^6.23.0",
     "styled-components": "^6.1.9",
+    "styled-icons": "^10.47.1",
     "zod": "^3.23.6"
   },
   "devDependencies": {
