--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dotenv": "^0.1.3",
     "react-hook-form": "^7.51.4",
     "react-router-dom": "^6.23.0",
+    "react-slider": "^2.0.6",
     "styled-components": "^6.1.9",
     "styled-icons": "^10.47.1",
     "zod": "^3.23.6"
@@ -28,6 +29,7 @@
     "@types/node": "^20.12.10",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "@types/react-slider": "^1.3.6",
     "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
